2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/generic/paths.h (_PATH_MAN): Set to "/usr/share/man"
	(_PATH_PRESERVE): Set to "/var/lib".
	(_PATH_RWHODIR): Set to "/var/spool/rwho".

	* sysdeps/mach/hurd/openat.c (__openat): Set type of MODE to mode_t
	instead of int.

	* sysdeps/mach/hurd/xmknodat.c (__xmknodat): Deallocate NODE port only
	if __dir_mkfile succeeded.

	* sysdeps/mach/hurd/dup3.c: Lock _hurd_dtable_lock before
	checking for _hurd_dtablesize.  Unlock it right after having
	finished _hurd_dtable allocation.

2012-05-10  Thomas Schwinge  <thomas@schwinge.name>

	* sysdeps/mach/hurd/configure.in: Remove warning for --prefix=[...].
	* sysdeps/mach/hurd/configure: Regenerated.
	* sysdeps/unix/sysv/linux/configure.in: Move --prefix=/usr
	special-casing to...
	* sysdeps/gnu/configure.in: ... this new file.
	* sysdeps/unix/sysv/linux/configure: Regenerated.
	* sysdeps/gnu/configure: New generated file.

	* sysdeps/mach/hurd/bits/stat.h (struct stat): Align to what is done
	for Linux: use nsec instead of usec, as well as:
	[__USE_MISC || __USE_XOPEN2K8] (st_atim, st_mtim, st_ctim): New
	members of type struct timespec.
	[__USE_MISC || __USE_XOPEN2K8] (st_atime, st_mtime, st_ctime):
	New macros.
	(struct stat64): Likewise.
	(_STATBUF_ST_NSEC): New macro.
	* sysdeps/mach/hurd/xstatconv.c (xstat64_conv): Adapt to that.

	* hurd/lookup-retry.c (__hurd_file_name_lookup_retry): Use
	__strtoul_internal rather than strtoul.

2012-05-10  Pino Toscano  <toscano.pino@tiscali.it>

	* hurd/hurdsock.c (_hurd_socket_server): Check for negative domains,
	and reject them.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/setresgid.c (__setresgid): Handle the -1 case,
	which preserves existing values.
	* sysdeps/mach/hurd/setresuid.c (__setresuid): Likewise.

2012-05-10  Pino Toscano  <toscano.pino@tiscali.it>

	* hurd/hurdselect.c (_hurd_select): Return EINVAL for negative